@@ -1,3 +1,5 @@
+	- added html_select_time custom function. (Andrei)
+
 Version 1.3.1pl1
 --------------
     - bug fix, recovered missing _syntax_error function
